[www.topmonks.com] Using Cloudinary helper in pages

--- a/www.topmonks.com/src/html/about-us/index.njk
+++ b/www.topmonks.com/src/html/about-us/index.njk
@@ -1,8 +1,8 @@
 {% extends 'layouts/topmonks.njk' %}
 {%- import 'macros/helpers.njk' as macros -%}
-{% block title %} About TopMonks{% endblock %}
+{% block title %}About TopMonks{% endblock %}
 {% block head %}
-<link rel="stylesheet" href="/assets/css/about-us.css">
+  <link rel="stylesheet" href="/assets/css/about-us.css">
 {% endblock %}
 
 {% block content %}
@@ -90,14 +90,18 @@
           <li>Be brave. Provide a sincere feedback regardless of the circumstances.</li>
           <li>Your freedom can’t affect the freedom of others.</li>
           <li>Success is a delivery not the time spent. Don’t wait to be asked for your next task, find
-            it yourself.</li>
+            it yourself.
+          </li>
           <li>Life is a constant change. Embrace it.</li>
           <li>Our company is a living organism interconnected with our partners, customers, and community.
-            There are no borders.</li>
+            There are no borders.
+          </li>
           <li>Give and you shall receive.</li>
           <li>Weirdness, non-conformity is welcome.</li>
         </ul>
-        <p>If you like these ideas, come <a href="/jobs/">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting people.</p>
+        <p>If you like these ideas, come <a href="/jobs/">join us</a>. Or, <a href="mailto:sales@topmonks.com">have your
+            project</a> delivered by us. Or, simply <a href="/contact/">visit us</a>. We enjoy meeting interesting
+          people.</p>
       </div>
     </div>
   </section>
