--- a/www.topmonks.com/src/html/macros/helpers.njk
+++ b/www.topmonks.com/src/html/macros/helpers.njk
@@ -1,6 +1,10 @@
+{% macro boolAttr(name, value) %}
+  {% if value %}{{ name }}{% endif %}
+{% endmacro %}
+
 {% macro sprite(id, altText, viewBox, classes) %}
 {% set viewBox = viewBox or "0 0 1 1"%}
-<span class='sprite -{{id}} {{classes}}'>
+<span class='sprite sprite--{{id}} {{classes}}'>
   <svg viewBox="{{viewBox}}">
     <title>{{altText}}</title>
     <use xlink:href='/assets/img/icons.svg#{{id}}'></use>
@@ -18,8 +22,7 @@
      src="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_auto,f_auto/https://insight.topmonks.com/avatar/{{member.id}}"
      srcset="https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1x,
              https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_1.5,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 1.5x,
-             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_2,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 2x,
-             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_3,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 3x"
+             https://res.cloudinary.com/topmonks/image/fetch/w_{{imageSize}},dpr_2,f_auto/https://insight.topmonks.com/avatar/{{member.id}} 2x"
      onerror="this.onerror=null; this.src='/assets/img/monk_logo.png'"
      width="{{imageSize}}" height="{{imageSize}}">
 {%- endmacro %}
