--- a/www.topmonks.cz/src/html/jak-pracujeme/index.njk
+++ b/www.topmonks.cz/src/html/jak-pracujeme/index.njk
@@ -1,10 +1,10 @@
-{% extends 'layouts/topmonks.html' %}
+{% extends 'layouts/topmonks.njk' %}
 {% block title %} Jak pracujeme - TopMonks{% endblock %}
 
 {% block content %}
 
 {% set caseStudiesData = { title : 'Jak pracujeme', subTitle : 'Vždy se naučíme něco nového ze spolupráce s našimi klienty.'} %}
 
-{% include 'components/case-studies/index.html' %}
+{% include 'components/case-studies/index.njk' %}
 
 {% endblock %}
