--- a/www.topmonks.cz/src/html/retail-konzultace/index.njk
+++ b/www.topmonks.cz/src/html/retail-konzultace/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/topmonks.html' %}
+{% extends 'layouts/topmonks.njk' %}
 {% set page = 'topmonks-retail-optimalizace-cenotvorby' %}
 {% block title %}Retailová Konzultace - TopMonks{% endblock %}
 
