--- a/www.topmonks.cz/src/html/tym/index.njk
+++ b/www.topmonks.cz/src/html/tym/index.njk
@@ -1,5 +1,5 @@
-{% extends 'layouts/topmonks.html' %}
-{%- import 'macros/helpers.html' as macros -%}
+{% extends 'layouts/topmonks.njk' %}
+{%- import 'macros/helpers.njk' as macros -%}
 {% block title %}Náš Tým - TopMonks{% endblock %}
 {% block head %}
   <link rel="stylesheet" href="/assets/css/team.css">
