--- a/www.topmonks.cz/src/html/volna-mista/index.njk
+++ b/www.topmonks.cz/src/html/volna-mista/index.njk
@@ -1,4 +1,4 @@
-{% extends 'layouts/topmonks.html' %}
+{% extends 'layouts/topmonks.njk' %}
 {% set page = 'topmonks-jobs' %}
 {% block title %}Volné pracovní pozice v TopMonks{% endblock %}
 
