--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -3,9 +3,9 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font: 18px/1.5555556 Lato, lato, sans-serif, BlinkMacSystemFont, Roboto, "Segoe UI",
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font: 18px/1.5555556 Lato, lato, sans-serif, BlinkMacSystemFont, Roboto,
+    "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
   font-variant-ligatures: common-ligatures contextual;
@@ -21,6 +21,7 @@ body {
 ul {
   padding: 0;
 }
+
 ul li {
   list-style: none;
   margin: 0;
@@ -55,6 +56,7 @@ h2 {
   color: #ffffff;
   text-align: center;
 }
+
 p {
   margin-bottom: 1em;
 }
@@ -85,6 +87,7 @@ a {
     font-size: 24px;
   }
 }
+
 .tm-text--align-center {
   text-align: center;
 }
