--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -1,8 +1,6 @@
-{% extends 'layouts/topmonks.html' %}
-{% from 'macros/helpers.html' import sprite %}
-
+{% extends 'layouts/topmonks.njk' %}
+{% from 'macros/helpers.njk' import sprite %}
 {% set page = 'topmonks-index' %}
-
 {% block title %}TopMonks - Pomůžeme vašemu revenue růst{% endblock %}
 
 {% block head %}
@@ -21,7 +19,7 @@
 
     @media screen and (max-width: 479px) {
       body {
-        background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_auto,q_auto,f_auto/v1563018647/www.topmonks.cz/TM-HP_img.png") no-repeat right calc(50% - 165px) top -105px;
+        background: url({{ "www.topmonks.cz/TM-HP_img.png" | cloudinaryUrl(width=603) }}) no-repeat right calc(50% - 165px) top -105px;
         background-size: 603px auto;
         overflow-x: hidden;
       }
@@ -29,7 +27,7 @@
 
     @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2), screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1), screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
       body {
-        background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_2,q_auto,f_auto/v1563018647/www.topmonks.cz/TM-HP_img.png") no-repeat right calc(50% - 165px) top -105px;
+        background: url({{ "www.topmonks.cz/TM-HP_img.png" | cloudinaryUrl(width=603,dpr=2) }}) no-repeat right calc(50% - 165px) top -105px;
         background-size: 603px auto;
         overflow-x: hidden;
       }
@@ -37,7 +35,7 @@
 
     @media screen and (min-width: 480px) {
       body {
-        background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_auto,q_auto,f_auto/v1563018647/www.topmonks.cz/TM-HP_img.png") no-repeat right calc(50% - 430px) top 75px;
+        background: url({{ "www.topmonks.cz/TM-HP_img.png" | cloudinaryUrl(width=919) }}) no-repeat right calc(50% - 430px) top 75px;
         background-size: 919px auto;
         overflow-x: hidden;
       }
@@ -45,7 +43,7 @@
 
     @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
       body {
-        background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_2,q_auto,f_auto/v1563018647/www.topmonks.cz/TM-HP_img.png") no-repeat right calc(50% - 430px) top 75px;
+        background: url({{ "www.topmonks.cz/TM-HP_img.png" | cloudinaryUrl(width=919,dpr=2) }}) no-repeat right calc(50% - 430px) top 75px;
         background-size: 919px auto;
         overflow-x: hidden;
       }
