--- a/www.topmonks.cz/src/stylesheets/hp/funnel.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/funnel.scss
@@ -13,14 +13,14 @@
     }
   }
   @media screen and (min-width: 840px) {
-    background: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_auto,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png")
+    background: cloudinaryUrl("topmonks.com/bgnd_funnel.png", $width: 903)
       no-repeat left calc(50% - 500px) top 230px;
     background-size: 903px auto;
   }
   @media screen and (min-width: 840px) and (min-device-pixel-ratio: 2),
     screen and (min-width: 840px) and (min-resolution: 192dpi),
     screen and (min-width: 840px) and (min-resolution: 2dppx) {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_903,dpr_2,q_auto,f_auto/v1553775999/topmonks.com/bgnd_funnel.png");
+    background-image: cloudinaryUrl("topmonks.com/bgnd_funnel.png", $width: 903, $dpr: 2);
   }
 
   .steps {
