--- a/www.topmonks.com/src/html/layouts/topmonks.njk
+++ b/www.topmonks.com/src/html/layouts/topmonks.njk
@@ -39,7 +39,7 @@
 </main>
 
 <link rel="stylesheet" href="/assets/css/footer.css">
-{% include 'shared/footer.njk' %}
+{% include 'common/footer.html' %}
 
 {% block javascript %}{% endblock %}
 
