--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <title>Blockchain by TopMonks</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="https://ajax.googleapis.com">
-  <link rel="preconnect" href="//cdnjs.cloudflare.com">
-  <link rel="preconnect" href="//use.typekit.net">
-  <link rel="preconnect" href="//cdn.jsdelivr.net">
-  <link rel="preconnect" href="//www.google-analytics.com">
+  <link rel="preconnect" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//www.google.com" crossorigin>
   <link rel="preconnect" href="//static.hotjar.com">
   <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -295,7 +293,7 @@
                class="mdc-layout-grid__cell--span-12">
               <article class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for the article"
+                  <img width="100%" alt="Photo for the article" loading="lazy"
                        src="{{ "blockchain.topmonks.com/article-img01.png" | cloudinaryUrl(width=480) }}"
                   >
                 </div>
@@ -304,7 +302,7 @@
                   <h3>MakerDAO&nbsp;&ndash; výhody, nevýhody a budoucnost projektu</h3>
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo"
+                    <img class="person__photo" loading="lazy"
                          src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
@@ -327,7 +325,7 @@
               <div class="mdc-layout-grid__inner">
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for an article"
+                  <img width="100%" alt="Photo for an article" loading="lazy"
                        src="{{ "blockchain.topmonks.com/article-img02.png" | cloudinaryUrl(width=480) }}">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -335,7 +333,7 @@
                   <h3>"AI is a Distraction" — Interview with Harry Halpin; CEO of NYM</h3>
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo"
+                    <img class="person__photo" loading="lazy"
                          src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
@@ -358,7 +356,7 @@
               <div class="mdc-layout-grid__inner">
 
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                  <img width="100%" alt="Photo for an article"
+                  <img width="100%" alt="Photo for an article" loading="lazy"
                        src="{{ "blockchain.topmonks.com/article-img03.png" | cloudinaryUrl(width=480) }}">
                 </div>
                 <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -366,7 +364,7 @@
                   <h3>MakerDAO a DAI – úrok jako zlý sluha i špatný pán</h3>
                   <div
                     class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                    <img class="person__photo"
+                    <img class="person__photo" loading="lazy"
                          src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=32) }}"
                          alt="[photo] Josef Tětek" width="32"
                          height="32">
@@ -401,7 +399,7 @@
           </div>
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            <img class="person__photo"
+            <img class="person__photo" loading="lazy"
                  src="{{ "avatar/lea-petrasova.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Lea Petrášová" width="92" height="92">
             <h3>Lea Petrášová</h3>
@@ -426,7 +424,7 @@
           </div>
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            <img class="person__photo"
+            <img class="person__photo" loading="lazy"
                  src="{{ "avatar/mrkva-lumir.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Lumír Mrkva" width="92" height="92">
             <h3>Lumír Mrkva</h3>
@@ -453,7 +451,7 @@
             </a>
           </div>
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            <img class="person__photo"
+            <img class="person__photo" loading="lazy"
                  src="{{ "avatar/josef-tetek.jpg" | cloudinaryUrl(width=92) }}"
                  alt="[photo] Josef Tětek" width="92" height="92">
             <h3>Josef Tětek</h3>
