--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -4,11 +4,13 @@
   <meta charset="UTF-8"/>
   <title>TopMonks Startup Studio</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width"/>
-  <meta
-    name="viewport"
-    content="width=device-width,initial-scale=1,viewport-fit=cover"
-  />
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width,Save-Data"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+  <link rel="preconnect" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="//www.googletagmanager.com">
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//www.google.com" crossorigin>
+  <link rel="preconnect" href="//static.hotjar.com">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
@@ -19,18 +21,10 @@
   <link rel="canonical" href="https://studio.topmonks.com/"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:site" content="@topmonks"/>
-  <meta
-    name="twitter:title"
-    property="og:title"
-    content="Developers for your startup"
-  />
+  <meta name="twitter:title" property="og:title" content="Developers for your startup"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://studio.topmonks.com/"/>
-  <meta
-    name="twitter:image"
-    property="og:image"
-    content="https://studio.topmonks.com/og-image.png"
-  />
+  <meta name="twitter:image" property="og:image" content="https://studio.topmonks.com/og-image.png"/>
   {% include 'shared/analytics.njk' %}
   {% include "common/lato.njk" %}
   <link rel="stylesheet" href="/assets/css/typography.css"/>
