--- a/blockchain.topmonks.com/src/html/blog/index.njk
+++ b/blockchain.topmonks.com/src/html/blog/index.njk
@@ -9,11 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <link rel="preconnect" href="https://ajax.googleapis.com">
-  <link rel="preconnect" href="//cdnjs.cloudflare.com">
-  <link rel="preconnect" href="//use.typekit.net">
-  <link rel="preconnect" href="//cdn.jsdelivr.net">
-  <link rel="preconnect" href="//www.google-analytics.com">
+  <link rel="preconnect" href="//www.google-analytics.com" crossorigin>
+  <link rel="preconnect" href="//www.google.com" crossorigin>
   <link rel="preconnect" href="//static.hotjar.com">
   <link rel="preload" href="https://www.googletagmanager.com/gtm.js?id=GTM-T4KMQ2F" as="script">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -48,7 +45,7 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-T4KMQ2F");</script>
   <!-- End Google Tag Manager -->
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/blog.css">
 
@@ -65,24 +62,25 @@
       <div class="blog__box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <article class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="{{ article.title }}" src="/images/articles-img/{{ latestArticle.picture }}" width="100%" height="100%">
+            <img alt="{{ article.title }}" src="/images/articles-img/{{ latestArticle.picture }}" width="100%"
+                 height="100%">
           </div>
           <div class="blog__box-body mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <time datetime="{{ latestArticle.published }}"
                   class="published-date">{{ latestArticle.published | longDate("en") }}</time>
             <h3>{{ latestArticle.title }}</h3>
             <p>{{ latestArticle.body | safe }}</p>
-              <div
-                class="personal__id">
-                <img alt="{{ latestArticle.author }}" class="person__photo" src="{{ latestArticle.authorImage }}"
-                     width="32" height="32">
-                <span class="name">{{ latestArticle.author }}</span>
-              </div>
-              <div
-                class="article-link">
-                <a title="Show Article" href="{{ latestArticle.link }}">Show article</a>
-              </div>
+            <div
+              class="personal__id">
+              <img alt="{{ latestArticle.author }}" class="person__photo" src="{{ latestArticle.authorImage }}"
+                   width="32" height="32">
+              <span class="name">{{ latestArticle.author }}</span>
             </div>
+            <div
+              class="article-link">
+              <a title="Show Article" href="{{ latestArticle.link }}">Show article</a>
+            </div>
+          </div>
         </article>
       </div>
     </div>
@@ -90,7 +88,8 @@
 </section>
 
 {% macro mediaImage(path) %}
-  <img alt="Picture of the Article" src="/images/poscasts-img/{{ podcast.picture }}" width="100%" height="100%">
+  <img alt="Picture of the Article" loading="lazy" src="/images/poscasts-img/{{ podcast.picture }}" width="100%"
+       height="100%">
 {% endmacro %}
 
 {% macro mediaArticle(article, images) %}
@@ -99,12 +98,13 @@
     <article class="">
       <a href="{{ article.link }}" class="">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <img alt="{{ article.title }}" width="100%" src="/images/podcasts-img/{{ article.picture }}">
+          <img alt="{{ article.title }}" loading="lazy" width="100%" src="/images/podcasts-img/{{ article.picture }}">
           <div class="blog__box-body">
             <time datetime="{{ article.published }}" class="media__date">{{ article.published | longDate("en") }}</time>
             <h3>{{ article.title }}</h3>
             <div class="personal__id">
-              <img class="person__photo" src="{{ article.authorImage }}" alt="{{ article.author }}" width="32" height="32">
+              <img class="person__photo" loading="lazy" src="{{ article.authorImage }}" alt="{{ article.author }}"
+                   width="32" height="32">
               <span class="name">{{ article.author }}</span>
             </div>
             <div class="article-link">
@@ -133,21 +133,23 @@
 </section>
 
 {% macro mediaImage(path) %}
-  <img alt="Picture of the Article" src="/images/articles-img/{{ article.picture }}" width="100%" height="100%">
+  <img alt="Picture of the Article" loading="lazy" src="/images/articles-img/{{ article.picture }}" width="100%"
+       height="100%">
 {% endmacro %}
 
 {% macro mediaArticle(article, images) %}
 
   <div class="blog__box mdc-layout-grid__cell">
     <article class="">
-      <a name="Article Link" href="{{ article.link }}" class="">
+      <a href="{{ article.link }}" class="">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <img alt="{{ article.title }}" width="100%" src="/images/articles-img/{{ article.picture }}">
+          <img alt="{{ article.title }}" loading="lazy" width="100%" src="/images/articles-img/{{ article.picture }}">
           <div class="blog__box-body">
             <time datetime="{{ article.published }}" class="media__date">{{ article.published | longDate("en") }}</time>
             <h3>{{ article.title }}</h3>
             <div class="personal__id">
-              <img class="person__photo" src="{{ article.authorImage }}" alt="{{ article.author }}" width="32" height="32">
+              <img class="person__photo" loading="lazy" src="{{ article.authorImage }}" alt="{{ article.author }}"
+                   width="32" height="32">
               <span class="name">{{ article.author }}</span>
             </div>
             <div class="article-link">
