--- a/studio.topmonks.com/src/html/shared/footer.njk
+++ b/studio.topmonks.com/src/html/shared/footer.njk
@@ -25,7 +25,7 @@
               <li><a href="https://www.topmonks.com/jobs/">Jobs</a></li>
               <li><a href="https://www.topmonks.com/contact/">Contacts</a></li>
               {% for linkText, href in extraNavLinks %}
-                <a href="{{href}}">{{linkText}}</a>
+                <li><a href="{{href}}">{{linkText}}</a></li>
               {% endfor %}
             </ul>
           </nav>
@@ -153,9 +153,9 @@
               </svg>
             </a>
             <a href="https://dribbble.com/TopMonks" title="TopMonks on Dribbble" rel="me" itemprop="sameAs" class="dribbble">
-              <svg enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve"
+              <svg enable-background="new 0 0 512 512" version="1.1" viewBox="0 0 512 512" xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg" width="33px" height="33px">
-                <g id="Layer_1_1_">
+                <g>
                   <circle cx="256" cy="256" fill="#E94E8A" r="238.2" />
                   <title>[Logo icon] Dribbble</title>
                 </g>
